# simplemem-mcp

./: .gitignore  .simplemem.yaml  README.md  pyproject.toml
simplemem_mcp/: __init__.py  __main__.py  cli.py  client.py  compression.py  local_reader.py  projects_utils.py  server.py  watcher.py
tests/: __init__.py  test_bootstrap.py  test_project_id_inference.py  test_project_registry.py  test_v2_tools.py
