[project]
name = "simplemem-mcp"
version = "1.0.0"
description = "Memory for Claude Code - Lightweight MCP server with cloud backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shimon Vainer"}
]
keywords = ["mcp", "memory", "claude", "ai", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/shimonvainer/simplemem"
Repository = "https://github.com/shimonvainer/simplemem"

[project.scripts]
simplemem-mcp = "simplemem_mcp.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
